# Stream

./: .apply_copyright.sh  .gitattributes  .gitignore  .gitmodules  AUTHORS.TXT  CMakeLists.txt  Config.cmake.in  LICENSE.TXT  README.md
assets/geofiles/: two-disks.geo
assets/scripts/: simple_node_elem_reader.py
include/: CMakeLists.txt  defines.h
include/geometry/: CMakeLists.txt  bbox.hpp  lbvh.hpp  lbvh_agglo.hpp  morton.hpp  predicates.hpp  primitives.hpp  traversal_stack.hpp  trbvh.hpp  vec.hpp
include/mesh/: CMakeLists.txt  DirectAlphaShape2D.hpp  DirectAlphaShape3D.hpp  mesh.hpp
include/numerics/: CMakeLists.txt  csr.hpp  linear_system.hpp  preconditioner.hpp  solver.hpp
include/utils/: CMakeLists.txt  timing.hpp
python/: CMakeLists.txt  __init__.py
python/mesh/: __init__.py  ashape2D.py  ashape3D.py  mesh.py
python/numerics/: __init__.py  cg.py  csr.py  jacobi.py  linsys.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  ava_instanciation.cpp
src/geometry/: CMakeLists.txt  bbox.cpp  lbvh.cpp  lbvh_agglo.cpp  primitives.cpp  vec.cpp
src/mesh/: CMakeLists.txt  DirectAlphaShape2D.cpp  DirectAlphaShape3D.cpp  mesh.cpp
src/numerics/: CMakeLists.txt  conjugate_gradient.cpp  csr.cpp  linear_system.cpp  preconditioner_jacobi.cpp
src/utils/: CMakeLists.txt  timing.cpp
testcases/: CMakeLists.txt
testcases/IMR26/: CMakeLists.txt  README.md  ashape_from_file2D.cpp  run_all.py  run_on_simulation_meshes.py  simple_mesh_viewer.py  uniform2D.cpp  uniform3D.cpp
tests/: CMakeLists.txt
tests/geometry/: CMakeLists.txt  lbvh_agglo_random_collision.cpp  lbvh_agglo_random_collision3D.cpp  lbvh_agglo_simple_collision.cpp  lbvh_random_collision.cpp  lbvh_random_collision3D.cpp  lbvh_simple_collision.cpp  test_lbvh_agglo_random_collision.cpp  test_lbvh_agglo_simple_collision.cpp  test_lbvh_random_collision.cpp  test_lbvh_simple_collision.cpp  traversal_stack.cpp  trbvh_random_collision.cpp  vec.cpp
tests/mesh/: CMakeLists.txt  check_ashape.cpp  init_mesh.cpp  insert_bvh_neighbors.cpp  insert_by_circumsphere_check.cpp  insert_morton_neighbors.cpp  mesh_from_gmsh.py  mesh_python_api.py
tests/numerics/: CMakeLists.txt  cg_jacobi.cpp  python_cg_api.py  python_cg_laplace.py
